<resources>
    <string name="app_name">شورى</string>
    <string name="FieldRequired">الحقل مطلوب</string>
    <string name="ConsultationSaved">تم ارسال استشارتك بنجاح</string>
    <string name="ErrorOccured">حصل خطأ، الرجاء المحاولة مرة أخرى</string>
    <string name="InvalidEmail">البريد الالكتروني خطأ</string>
    <string name="EmailPattern">([\w.-]+@([\w-]+)\.+\w{2,})</string>
    <string name="title_requestConsultation">قدم سؤالك</string>
    <string name="Name">الاسم</string>
    <string name="Email">البريد الالكتروني</string>
    <string name="Gender">الجنس</string>
    <string name="Female">أنثى</string>
    <string name="Male">ذكر</string>
    <string name="Age">العمر</string>
    <string name="Privacy">حقوق النشر</string>
    <string name="PrivacyPermitted">يسمح بالنشر</string>
    <string name="PrivacyNotPermitted">لا يسمح بالنشر</string>
    <string name="Body">نص الرسالة</string>
    <string name="Send">ارسال</string>
    <string name="Email_ConsultationRecieved">عزيزي %1$s،\n\n لقد تم استلام استشارتك رقم %2$s بنجاح. \n\n تحياتنا لك، \n جمعية وميض</string>
    <string name="Email_NewConsultation">عزيزي %1$s،\n\n هناك استشارة رقم %2$s بانتظارك. نرجوا الدخول على الموقع الالكتروني أو التطبيق للرد عليها. جعلها الله في موازين اعمالك.\n\n تحياتنا لك، \n جمعية وميض</string>
    <string name="username">اسم المستخدم</string>
    <string name="forgotPassword">نسيت كلمة المرور</string>
    <string name="consultantName">اسم المستشار</string>
    <string name="Field">المجال</string>
    <string name="Bio">نبذة</string>
    <string name="PreviousConsultation">الاستشارات المقدمة</string>
    <string name="Chat">المحادثة الفورية</string>
    <string name="EmailSend">" تم إرسال الايميل"</string>
    <string name="SendingEmail">"يتم إرسال الإيميل "</string>
    <string name="PleaseWait">من فضلك انتظر ...</string>
    <string name="Email_NewPassword">عزيزي %1$s،\n\n لقد تم اعادة تعيين كلمة المرور في شورى الى "%2$s" بنجاح. \n\n تحياتنا لك، \n جمعية وميض</string>
    <string name="Subject_PasswordReset">تطبيق شورى | اعادة تعيين كلمة المرور</string>
    <string name="viewConsultant">عرض المستشار</string>
    <string name="Subject_ConsultationRecieved">تطبيق شورى | تم استلام استشارتك</string>
    <string name="ConsultationAnswer">رد المستشار</string>
    <string name="Consultation">الاستشارة</string>
    <string name="ViewConsultation">عرض استشارة</string>
    <string name="ViewConsultations">عرض الاستشارات</string>
    <string name="DataSavedSuccessfully">تم حفظ البيانات بنجاح</string>
    <string name="MaritalStatus">الحالة الاجتماعية</string>
    <string name="Occupation">المهنة</string>
    <string name="Cancel">إلغاء</string>
    <string name="Save">حفظ</string>
    <string name="UserProfile">ملف المستخدم</string>
</resources>
