<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height = "0dp"
            android:layout_weight = "0.8"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height = "0dp"
            android:layout_weight = "0.5"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal">
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/editusername"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:layout_weight="2"
                android:ems="10"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="16dp" />

            <TextView
                android:text="@string/username"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:paddingRight="16dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:textStyle="normal|bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height = "0dp"
            android:layout_weight = "1"
            android:textAlignment="center"
            android:gravity="center_vertical">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/editemail"
                android:gravity="center_vertical"
                android:layout_weight="2"
                android:ems="10"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="16dp" />

            <TextView
                android:text="@string/Email"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:paddingRight="16dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:textStyle="normal|bold" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height = "0dp"
            android:layout_weight = "1"
            android:textAlignment="center"
            android:gravity="center_vertical">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/editage"
                android:gravity="center_vertical"
                android:layout_weight="2"
                android:ems="10"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/Age"
                android:paddingRight="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textStyle="normal|bold"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height = "0dp"
            android:layout_weight = "1"
            android:textAlignment="center"
            android:gravity="center_vertical">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/editgender"
                android:gravity="center_vertical"
                android:layout_weight="2"
                android:ems="10"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/Gender"
                android:paddingRight="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textStyle="normal|bold"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height = "0dp"
            android:layout_weight = "1"
            android:textAlignment="center"
            android:gravity="center_vertical">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/editstatus"
                android:gravity="center_vertical"
                android:layout_weight="2"
                android:ems="10"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/MaritalStatus"
                android:paddingRight="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textStyle="normal|bold"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height = "0dp"
            android:layout_weight = "1"
            android:textAlignment="center"
            android:gravity="center_vertical">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/editjob"
                android:gravity="center_vertical"
                android:layout_weight="2"
                android:ems="10"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/Occupation"
                android:paddingRight="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textStyle="normal|bold"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height = "0dp"
            android:layout_weight = "1.5"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal">

            <Button
                android:text="@string/Cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cancelButton" />

            <Button
                android:text="@string/Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saveButton"/>
        </TableRow>
    </TableLayout>
</LinearLayout>